Fixed bug #36420 (segfault when access result->num_rows after calling result->close())