ext/mysqli/mysqli.c
@@ -15,7 +15,7 @@
   | Author: Georg Richter <georg@php.net>                                |
   +----------------------------------------------------------------------+
 
-  $Id: mysqli.c,v 1.72.2.8 2006/01/14 14:15:41 georg Exp $ 
+  $Id: mysqli.c,v 1.72.2.9 2006/02/16 16:03:27 iliaa Exp $ 
 */
 
 #ifdef HAVE_CONFIG_H
@@ -198,6 +198,11 @@ zval *mysqli_read_property(zval *object, zval *member, int type TSRMLS_DC)
 
 	ret = FAILURE;
 	obj = (mysqli_object *)zend_objects_get_address(object TSRMLS_CC);
+	/* object was already destroyed */
+	if (!obj->ptr) {
+		retval = EG(uninitialized_zval_ptr);
+		return(retval);
+	}
 
  	if (member->type != IS_STRING) {
 		tmp_member = *member;
